--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,13 @@ BAIDU_SECRET_KEY=your_baidu_secret_key_here
 # 用于验证外包人员身份的安全令牌
 CLIENT_AUTH_TOKEN=your_secure_client_token_here
 
+# 多角色登录系统配置（V2.2新增）
+ADMIN_USER=admin
+ADMIN_PASS=your_admin_password_here
+OUTSOURCE_USER=outsource
+OUTSOURCE_PASS=your_outsource_password_here
+SESSION_SECRET_KEY=your-super-secret-session-key-change-this-in-production
+
 # 服务配置
 PORT=8001
 DEBUG=false
