--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# WordPress软文发布中间件 V2.1 依赖包
+# WordPress 软文发布中间件 V2.4 - 依赖包列表
 
 # Web框架
 fastapi>=0.100.0
@@ -10,6 +10,7 @@ python-multipart>=0.0.5
 
 # HTTP客户端
 aiohttp>=3.8.0
+requests>=2.28.0
 
 # 数据验证
 pydantic>=2.0.0
@@ -20,5 +21,17 @@ python-dotenv>=1.0.0
 # SSL警告禁用
 urllib3>=1.26.0
 
-# 可选：日志和监控
+# V2.4新增：监控和性能
+psutil>=5.9.0
+
+# 安全相关
+cryptography>=41.0.0
+
+# 开发和测试工具（可选）
+# pytest>=7.4.0
+# pytest-asyncio>=0.21.0
+# black>=23.0.0
+# flake8>=6.0.0
+
+# 日志和监控（可选）
 # loguru>=0.7.0
